CSS Styles done
hero section fixed and fully responsive.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
         <main class="main-content">
             <section class="hero-section">
-                <img src="assets\img\hero-photo@1x.jpg" alt="Hero Photo - Do More">
+                <h2>Hi I'm Alex, welcome to my portfolio!</h2>
+                <p>I love building cool websites and stuff for the web.</p>
             </section>
 
             <div class="wrapper">
