Responsive layout updated - Mobile First
CSS styles updated, following the mobile first process in order to improve the site performance

--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
         <link rel="stylesheet" href="assets/css/styles.css">
   </head>
   <body>
-        <header>
-            <div class="wrapper">
+        <header class="wrapper">
                 <section class="header-logo"></section>
                 <section class="header-info">
                     <h1>Alejandro Gamero</h1>
                     <h3>Aspiring Front-End Developer</h3>
                 </section>
-            </div>
         </header>
 
         <main class="main-content">
@@ -28,34 +26,32 @@
                 <p>I love building cool websites and stuff for the web.</p>
             </section>
 
-            <div class="wrapper">
-                <section class="features">
-                    <h2>Featured Work</h2>
-                    <div class="cards-container">
-                        <div class="feature-card">
-                            <a href="https://codepen.io/LalexG/pen/pVbzBY/" target="_blank">
-                                <img src="assets/img/Animal-Card-iMac.png" alt="Animal Card MacBook">
-                                <h3>Animal Trading Card</h3>
-                                <p>HTML & CSS Udacity Project</p>
-                            </a>
-                        </div>
-                        <div class="feature-card">
-                            <a href="https://codepen.io/LalexG/pen/EEmoGO" target="_blank">
-                                <img src="assets/img/Bookmarker-iMac.png" alt="Pixel Art Make MacBook">
-                                <h3>Bookmarker Application</h3>
-                                <p>HTML - CSS - Vanilla Javascript</p>
-                            </a>
-                        </div>
-                        <div class="feature-card">
-                            <a href="https://codepen.io/LalexG/pen/JpMawq" target="_blank">
-                                <img src="assets/img/Pixel-Art-Maker-iMac.png" alt="Site Bookmarker MacBook">
-                                <h3>Pixel Art Maker</h3>
-                                <p>HTML - CSS - JS (jQuery)</p>
-                            </a>
-                        </div>
+            <section class="features">
+                <h2>Featured Work</h2>
+                <div class="cards-container">
+                    <div class="feature-card">
+                        <a href="https://codepen.io/LalexG/pen/pVbzBY/" target="_blank">
+                            <img src="assets/img/Animal-Card-iMac.png" alt="Animal Card MacBook">
+                            <h3>Animal Trading Card</h3>
+                            <p>HTML & CSS Udacity Project</p>
+                        </a>
                     </div>
-                </section>
-            </div>
+                    <div class="feature-card">
+                        <a href="https://codepen.io/LalexG/pen/EEmoGO" target="_blank">
+                            <img src="assets/img/Bookmarker-iMac.png" alt="Pixel Art Make MacBook">
+                            <h3>Bookmarker Application</h3>
+                            <p>HTML - CSS - Vanilla Javascript</p>
+                        </a>
+                    </div>
+                    <div class="feature-card">
+                        <a href="https://codepen.io/LalexG/pen/JpMawq" target="_blank">
+                            <img src="assets/img/Pixel-Art-Maker-iMac.png" alt="Site Bookmarker MacBook">
+                            <h3>Pixel Art Maker</h3>
+                            <p>HTML - CSS - JS (jQuery)</p>
+                        </a>
+                    </div>
+                </div>
+            </section>
 
             <section class="quote-container">
                   <div class="wrapper">
