Add CSS animation
Adding some CSS animation to hero section content.

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
         <main class="main-content">
             <section class="hero-section">
-                <h2>Hi I'm Alex, welcome to my portfolio!</h2>
-                <p>I love building cool websites and stuff for the web.</p>
+                <h2 class="animate-pop-in">Hi I'm Alex, welcome to my portfolio!</h2>
+                <p class="animate-pop-in">I love building cool websites and stuff for the web.</p>
             </section>
 
             <section class="features">
