Feature: add new JS animation
Scrollreveal added to the site to give a new fresh look.

--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
             <section class="features">
                 <h2>Featured Work</h2>
                 <div class="cards-container">
-                    <div class="feature-card">
+                    <div class="feature-card first">
                         <a href="https://codepen.io/LalexG/pen/pVbzBY/" target="_blank">
                             <img src="assets/img/Animal-Card-iMac.png" alt="Animal Card MacBook">
                             <h3>Animal Trading Card</h3>
                             <p>HTML & CSS Udacity Project</p>
                         </a>
                     </div>
-                    <div class="feature-card">
+                    <div class="feature-card second">
                         <a href="https://codepen.io/LalexG/pen/EEmoGO" target="_blank">
                             <img src="assets/img/Bookmarker-iMac.png" alt="Pixel Art Make MacBook">
                             <h3>Bookmarker Application</h3>
                             <p>HTML - CSS - Vanilla Javascript</p>
                         </a>
                     </div>
-                    <div class="feature-card">
+                    <div class="feature-card third">
                         <a href="https://codepen.io/LalexG/pen/JpMawq" target="_blank">
                             <img src="assets/img/Pixel-Art-Maker-iMac.png" alt="Site Bookmarker MacBook">
                             <h3>Pixel Art Maker</h3>
@@ -75,5 +75,9 @@
             </div>
         </footer>
 
+      <script src="assets/js/vendors/scrollreveal.min.js"></script>
+      <script src="assets/js/app.js"></script>
+
+      </script>
   </body>
 </html>
